2010-10-06  Julien Danjou  <julien@danjou.info>

	* sieve.texi (Manage Sieve API): Document sieve-manage-authenticate.

	* message.texi (PGP Compatibility): Remove reference to gpg-2comp,
	broken link.

	* gnus-faq.texi (FAQ 8-3): Remove references to my.gnus.org.

	* gnus.texi (Comparing Mail Back Ends): Remove broken link and allusion
	to ReiserFS.

	* gnus-faq.texi (FAQ 5-5): Fix Flyspell URL.
	(FAQ 7-1): Fix getmail URL.

2010-10-06  Daiki Ueno  <ueno@unixuser.org>

	* epa.texi (Caching Passphrases): New section.

2010-10-06  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (SHELL): Set it.
	(info): Move the mkdir dependency to the individual info files.
	(mostlyclean): Tidy up.
	(clean): Only delete the specific dvi and pdf files.
	(maintainer-clean): Be more restrictive in what we delete.
	($(infodir)): Add parallel build workaround.

2010-10-04  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus.texi (Misc Article): Document gnus-widen-article-window.

2010-10-03  Julien Danjou  <julien@danjou.info>

	* emacs-mime.texi (Display Customization): Update
	mm-inline-large-images documentation and add documentation for
	mm-inline-large-images-proportion.

2010-10-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Frequently Asked Questions): Mention
	remote-file-name-inhibit-cache.

2010-10-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus.texi (Splitting Mail): Fix @xref syntax.
	(Splitting Mail): Really fix the @ref syntax.

2010-10-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus.texi (Splitting Mail): Mention the new fancy splitting
	function.
	(Article Hiding): Add google banner example.  Suggested by Benjamin
	Xu.

2010-09-30  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus.texi (Spam Package Configuration Examples, SpamOracle): Remove
	nnimap-split-rule from examples.

2010-09-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus.texi (Mail Source Specifiers): Remove webmail.el mentions.